fix modal styling on mobile

--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -9,6 +9,8 @@
   }
 
   input, textarea {
+    display: block;
+    min-width: 0;
     border: 1px solid #8592AD;
     border-radius: 0.5rem;
     outline: none;
